# rust-cross-platform-example

./: Cargo.toml  README.md
js/: index.html  package.json  tsconfig.json
js/src/: index.ts
python/: .gitignore  maturin.toml  pyproject.toml
python/calculator/: calculator.pyi
python/tests/: test_calculator.py
src/: lib.rs
