[package]
name = "calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.92"

[dependencies.pyo3]
version = "0.21.2"
optional = true
features = ["extension-module"]

[features]
default = []
python-extension = ["pyo3"]

[lib]
crate-type = ["cdylib"]
